--- a/MainPageAction_zh_CNsss.properties
+++ b/MainPageAction_zh_CNsss.properties
@@ -1,4 +1,4 @@
-mainPage=\u4e3b\u9875
+mainPage=\u7CFB\u7EDF\u8BA2\u5355
 install.nowRepairCompanyName=\u59d4\u6258\u7ef4\u4fee\u516c\u53f8
 install.manufactureNo=\u5236\u9020\u53f7
 install.installDate=\u5b89\u88c5\u65e5
@@ -21,7 +21,7 @@ installApply.applyerName=\u7533\u8bf7\u4eba
 installApply.applyDate=\u7533\u8bf7\u65e5\u671f
 unconfirmed=\u672a\u786e\u8ba4
 uncompleted=\u672a\u5b8c\u6210
-unconfirmInstallInfo=\u672a\u786e\u8ba4\u5b89\u88c5\u4fe1\u606f
-unconfirmFaultInfo=\u672a\u5b8c\u6210\u6545\u969c\u4fe1\u606f
-unconfirmInstallaApplyInfot=\u4ea7\u54c1\u4f7f\u7528\u60c5\u51b5\u53d8\u66f4\u7533\u8bf7\u4fe1\u606f
+unconfirmInstallInfo=\u672A\u5B8C\u6210\u8BA2\u5355
+unconfirmFaultInfo=\u5931\u8D25\u8BA2\u5355
+unconfirmInstallaApplyInfot=\u6210\u529F\u8BA2\u5355
 
